# sfml-game

./: .clang_complete  CMakeLists.txt  README  TODO
include/: .Vector.h.swp  Button.h  CreditsState.h  Entity.h  EntityFactory.h  FpsManager.h  Game.h  GameState.h  GameplayState.h  InputContext.h  InputSystem.h  KeyBinding.h  MainMenuState.h  Menu.h  PausedState.h  State.h  StateManager.h  Vector.h  Vector2.h
include/Component/: BaseComponent.h  GraphicsComponent.h  Input.h  InputComponent.h  PhysicsComponent.h  PlayerGraphicsComponent.h  PlayerInputComponent.h  ShipGraphicsComponent.h  ShipInputComponent.h
include/Component/Input/: InputComponent.h  KeyboardInputComponent.h  KeyboardListener.h  MouseInputComponent.h  MouseListener.h
include/Menu/: Menu.h  MenuKeyListener.h
src/: .clang_complete  Button.cpp  Button.h  CreditsState.cpp  Entity.cpp  EntityFactory.cpp  FpsManager.cpp  Game.cpp  Game.h  GameplayState.cpp  GameplayState.h  InputContext.cpp  InputSystem.cpp  MainMenuState.cpp  MainMenuState.h  Menu.cpp  Menu.h  ShipGraphicsComponent.cpp  State.h  StateManager.cpp  StateManager.h  fpsmanager.cpp  fpsmanager.h  game.cpp  game.h  main.cpp  mainmenustate.cpp  mainmenustate.h  screen.h  sfmldemo  state.cpp  state.h
src/Component/: PlayerGraphicsComponent.cpp
src/Menu/: Button.cpp  Menu.cpp  MenuKeyListener.cpp
src/include/: fpsmanager.h  game.h  mainmenustate.h  state.h
